<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/normal_margin"
    android:paddingEnd="@dimen/normal_margin"
    android:paddingBottom="@dimen/small_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.goodwy.commons.views.MyTextView
            android:id="@+id/ve_focus_none"
            style="@style/VeChip"
            android:text="@string/ve_focus_none" />

        <com.goodwy.commons.views.MyTextView
            android:id="@+id/ve_focus_gaussian"
            style="@style/VeChip"
            android:text="@string/ve_focus_gaussian" />

        <com.goodwy.commons.views.MyTextView
            android:id="@+id/ve_focus_radial"
            style="@style/VeChip"
            android:text="@string/ve_focus_radial" />

        <com.goodwy.commons.views.MyTextView
            android:id="@+id/ve_focus_linear"
            style="@style/VeChip"
            android:text="@string/ve_focus_linear" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/ve_focus_strength"
            android:textColor="@android:color/white"
            android:textSize="@dimen/smaller_text_size" />

        <SeekBar
            android:id="@+id/ve_seek_focus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="100"
            android:progress="60" />
    </LinearLayout>

    <TextView
        android:id="@+id/ve_focus_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ve_selected_item_hint"
        android:textColor="#B3FFFFFF"
        android:textSize="@dimen/smaller_text_size"
        android:visibility="gone" />
</LinearLayout>
