<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/normal_margin"
    android:paddingEnd="@dimen/normal_margin"
    android:paddingBottom="@dimen/small_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ve_brush_color"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/ve_brush_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:text="@string/ve_brush_size"
            android:textColor="@android:color/white"
            android:textSize="@dimen/smaller_text_size" />

        <SeekBar
            android:id="@+id/ve_brush_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_weight="1"
            android:max="100"
            android:progress="15" />

        <ImageView
            android:id="@+id/ve_brush_undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/ve_brush_undo"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_undo_vector" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ve_brush"
        android:textColor="#B3FFFFFF"
        android:textSize="@dimen/smaller_text_size" />
</LinearLayout>
